[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Sprites/Objects/BreakingPlatform2.png" type="Texture" id=1]
[ext_resource path="res://src/objects/TinyBreakingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 0.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 0.5 )

[node name="TinyBreakingPlatform" type="KinematicBody2D"]
collision_mask = 15
motion/sync_to_physics = true
moving_platform_apply_velocity_on_leave = 2
script = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerCheckArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="PlayerCheckArea"]
position = Vector2( 0, -24.5 )
shape = SubResource( 2 )

[node name="BreakCheckArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="BreakCheckArea"]
position = Vector2( 0, 24.5 )
shape = SubResource( 3 )

[connection signal="area_entered" from="PlayerCheckArea" to="." method="_on_PlayerCheckArea_area_entered"]
[connection signal="body_entered" from="BreakCheckArea" to="." method="_on_BreakCheckArea_body_entered"]
